MDR client fixed. All test are back to green.